# rust-opentelemetry

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
docker/grafana/provisioning/datasources/: datasources.yml
docker/otel/: otel-collector-config.yaml
docker/prometheus/: prometheus.yml
docker/tempo/: tempo.yaml
src/: main.rs  prometheus.rs
