[package]
name = "rust-opentelemetry"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
hyper = "1.6.0"
log = "0.4.27"
opentelemetry = { version = "0.30.0", features = ["metrics", "trace"] }
opentelemetry-otlp = { version = "0.30.0", features = ["default", "grpc-tonic", "tonic", "gzip-tonic", "metrics"] }
opentelemetry_sdk = { version = "0.30.0", features = ["metrics", "trace"] }
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "registry"] }
metrics = {version = "0.24.1"}
metrics-exporter-prometheus = {version = "0.17.0" }
sysinfo = "0.35.2"
once_cell = "1.21.3"
