[package]
edition = "2024"
name = "rust-opentelemetry"
version = "0.1.0"

[dependencies]
axum = "0.8.4"
bytesize = "2.0.1"
hyper = "1.6.0"
log = "0.4.27"
metrics = {version = "0.24.2"}
metrics-exporter-prometheus = {version = "0.17.0"}
opentelemetry = {version = "0.30.0", features = ["metrics", "trace"]}
opentelemetry-otlp = {version = "0.30.0", features = ["default", "grpc-tonic", "tonic", "gzip-tonic", "metrics"]}
opentelemetry_sdk = {version = "0.30.0", features = ["metrics", "trace"]}
sysinfo = "0.35.2"
tokio = {version = "1.45.1", features = ["full"]}
tracing = "0.1.41"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = {version = "0.3.19", features = ["env-filter", "registry"]}
